fix types, add active to user update
